--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,18 +1,20 @@
 /* 
 desktop
 */
-@media screen (min-width: 992px){
-
+@media screen and (min-width: 992px){
+ 
 }
 /* 
 tablet
 */
-@media screen (max-width: 991.99px){
+@media screen and (max-width: 991.99px){
  
 }
 /*
 Smartphone
 */
-@media screen (max-width: 767.99px){
-
+@media screen and (max-width: 767.99px){
+ .logo--container{
+  text-align: center;
+ }
 }
