--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ custom properties
 font -- Nerko -- navbar logo
 */
 .logo-title{
-  font-size: 32px;
+font-size: 36px;
 color: var(--logo-color);
 text-transform: uppercase;
 font-family:"Nerko One", cursive;
@@ -32,4 +32,20 @@ font-family:"Nerko One", cursive;
 font-family: "Nerko One", cursive;
 font-weight: 400;
 font-style: normal;
+}
+
+/* 
+general rules
+*/
+
+.container{
+  margin: 0 auto;
+}
+
+/* 
+navbar style
+*/
+.logo--container{
+  padding: 0.5em 1em;
+  
 }
