--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,6 @@ font-family: "Nerko One", cursive;
 font-weight: 400;
 font-style: normal;
 }
-.row{
-  /* display: flex; */
-}
 
 /* 
 general rules
@@ -63,14 +60,18 @@ h1{
 .w-80{
   width: 80%;
 }
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
 
 /* 
 col width and general rules
 */
-.col-60{
+.col.w-60{
   max-width: 60%;
 }
-.col-100{
+.col.w-100{
   padding: 25px 0;
 }
 /*
@@ -107,4 +108,11 @@ main section
   font-size: 40px;
   font-weight: 800;
   color: var(--title-color);
+}
+
+/*
+card
+*/
+.card-body{
+  display: flex;
 }
