--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img{
 }
 
 a{
-  display: inline-block;
+  display: block;
   text-decoration: none;
   color: currentColor;
 }
@@ -60,7 +60,6 @@ h1{
 .container{
   width: 1500px;
   margin: 0 auto;
-  padding: 50px 25px;
 }
 .row{
   display: flex;
@@ -68,7 +67,9 @@ h1{
   padding: 25px 25px;
 }
 .row.socials{
- justify-content: space-between;
+ flex-wrap: nowrap;
+ margin: 0 auto;
+ column-gap: 15px;
 }
 
 /* 
@@ -90,7 +91,7 @@ col width and general rules
   max-width: 100%;
 }
 .col.w-20{
-  max-width: 20%;
+  width: 20%;
 }
 /*
 container recipe section
@@ -164,7 +165,6 @@ embed video
 social links settings
 */
 .social-icon{
-  padding: 0 4em;
   text-align: center;
   font-size: 30px;
   line-height: 50px;
@@ -184,4 +184,10 @@ social links settings
 }
 .fa-youtube{
   color: var(--youtube-color);
+}
+/* 
+banner
+*/
+.col-100.banner{
+  width: 100%;
 }
