--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ section{
   
 }
 h1{
-  margin-top: 20px;
+  margin-top: 1rem;
 }
 .container{
   width: 1500px;
@@ -85,10 +85,10 @@ col width and general rules
 */
 
 .col.w-60{
-  max-width: 60%;
+  width: 60%;
 }
 .col.w-100{
-  max-width: 100%;
+  width: 100%;
 }
 .col.w-20{
   width: 20%;
@@ -167,8 +167,9 @@ social links settings
 .social-icon{
   text-align: center;
   font-size: 30px;
-  line-height: 50px;
+  line-height: 60px;
   border-radius: 999px;
+  padding: 10px 0;
 }
 .fa-facebook{
   color: var(--facebook-color);
