--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h1{
   margin-top: 1rem;
 }
 .container{
-  width: 1500px;
+  width: 1200px;
   margin: 0 auto;
 }
 .row{
@@ -133,6 +133,14 @@ main section
 /*
 card
 */
+.video-wrap{
+  width: 60%;
+  aspect-ratio: 16/9;
+}
+.card-body iframe{
+  width: 100%;
+  height: 100%;
+}
 .card-header{
   margin-bottom: 40px;
 }
@@ -156,9 +164,8 @@ card
 .recipe-details ul{
   padding: 20px 0;
 }
-/* 
-embed video
-*/
+
+
 /* 
 social buttons settings
 */
@@ -195,7 +202,8 @@ banner
 /* 
 story section
 */
-.story img{
+
+.clear img{
   max-width: 380px;
   float: left;
   padding-right: 20px;
